# parasnake

./: .gitignore  README.md  TODO.txt  gen_doc.sh  pyproject.toml  shell.nix
docs/source/: conf.py  index.rst  ps_config.rst  ps_message.rst  ps_node.rst  ps_nodeid.rst  ps_server.rst
examples/mandel/: main.py  mandel_config.json  run_example.sh
src/parasnake/: ps_config.py  ps_message.py  ps_node.py  ps_nodeid.py  ps_server.py
tests/: check_all.sh  test_all.sh  test_communication.py  test_config.py  test_message.py  test_node_id.py
